--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "criswell",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,17 +8,30 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.9.6",
+    "@mdi/font": "5.9.55",
+    "aws-amplify": "^4.3.11",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "firebase": "^9.6.1",
+    "register-service-worker": "^1.7.1",
+    "roboto-fontface": "*",
+    "vue": "^3.2.26",
+    "vue-router": "^4.0.12",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
+    "@vue/cli-service": "^4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0"
   },
   "eslintConfig": {
     "root": true,
